--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,56 @@ li > a {
   opacity: 0.7;
   margin-bottom: 15px;
 }
+/* feature and experience styles  */
+.feature-experience-container{
+  gap: 15px;
+  margin-top: 160px;
+  max-height: 860px;
+  justify-content: space-between;
+}
+
+.feature-names{
+  width: 50%;
+}
+.feature-title{
+  font-size: 2.1rem;
+  padding-left: 10px;
+  border-left: 5px solid #ff8f0e;
+  margin-bottom: 10px;
+}
+.feature-desc{
+  font-size: 1rem;
+  opacity: .8 ;
+  margin-bottom: 70px;
+}
+
+.feature-name-cards{
+  padding: 18px 15px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.164);
+  margin-bottom: 20px;
+  border-radius: 2px;
+}
+.card-title{
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+.card-desc{
+  opacity: .7;
+}
+.feature-image{
+  width: 50%;
+}
+.feature-image img{
+  height: 100%;
+  margin-left: 100px;
+}
+
+
+
+
+
+
+
 
 /* responsive for mobile  */
 
@@ -164,6 +214,21 @@ li > a {
   .feature-content {
     width: 100%;
   }
+
+  .feature-experience-container{
+    flex-direction: column;
+    align-items: center;
+  }
+  .feature-names{
+    width: 100%;
+    padding: 10px;
+  }
+  .feature-image img{
+    height: 100%;
+    width: 100%;
+    margin-left: 0px;
+  }
+
 }
 
 /* responsive for tablet */
@@ -204,6 +269,21 @@ li > a {
   .feature-content {
     width: 100%;
   }
+
+  .feature-experience-container{
+    flex-direction: column;
+    align-items: center;
+  }
+  .feature-names{
+    width: 100%;
+    padding: 10px;
+  }
+  .feature-image img{
+    height: 100%;
+    width: 100%;
+    margin-left: 0px;
+  }
+
 }
 
 /* responsive for laptop */
@@ -236,6 +316,20 @@ li > a {
   }
   .feature-content{
     padding: 10px;
+  }
+
+  .feature-experience-container{
+    flex-direction: column;
+    align-items: center;
+  }
+  .feature-names{
+    width: 100%;
+    padding: 10px;
+  }
+  .feature-image img{
+    height: 100%;
+    width: 100%;
+    margin-left: 0px;
   }
 
 }
